# test

./: conftest.py  pyproject.toml
.github/workflows/: tests.yml
src/test/: peeling.single.estmaf.maf  testing.py
src/test/test_rec/: genotypes.txt  penetrance.txt  phasefile.txt
src/test/test_sex/output/: a.called.0.1  b.called.0.1  b.seg  c.called.0.1  c.dosages  c.seg
tests/: accu_report.txt  run_test.py  summary_report.txt
tests/test_error/outputs/: error.a.dosages  error.a.seg  error.b.dosages  error.b.seg  error.c.dosages  error.c.seg  error.d.dosages  error.d.seg
tests/test_sex/outputs/: sex.a.dosages  sex.b.dosages  sex.c.dosages  sex.d.dosages
