[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Test"
version = "0.0"
authors = [
  { name="Evie", email="xtang3@ed.ac.uk" },
]
description = "test"
# readme corresponds to the long_description
# "*.md" specifies the long_description_content_type
readme = "README.md"
license = {file = "MIT_License.txt"}
classifiers = [
    "Programming Language :: Python :: 3",
    'License :: OSI Approved :: MIT License',
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["test"]